@@ -56,6 +56,7 @@
     <Compile Include="MonoDevelop.ClassDesigner.Figures\TypeHeaderFigure.cs" />
     <Compile Include="MonoDevelop.ClassDesigner.Figures\TypeMemberFigure.cs" />
     <Compile Include="MonoDevelop.ClassDesigner.Figures\TypeMemberGroupFigure.cs" />
+    <Compile Include="MonoDevelop.ClassDesigner.Figures\InheritanceConnection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
