@@ -1,5 +1,12 @@
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
+	* InheritanceConnection.cs: Added inheritance connection
+	figure
+
+	* TypeFigure.cs: Changed linewidth of BasicDrawSelected
+
+2009-07-10  Manuel Cerón  <ceronman@gmail.com>
+
 	* TypeFigure.cs: Added ContainsPoint and Mame members
 
 	* TypeHeaderFigure.cs: Using a larger font size
